tests/errors/flow_specific_specialization2.lobster
import std

var a:string? = nil

a = ""

print (qsort([ 1, 2, 3 ]) x, y: x < y + a.length)

